--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,21 @@
-logging.level.root= info
+logging.level.root[0]= info
+logging.level.root[1]= debug
 spring.main.banner-mode=off
-
+# how to retrieve key from prop file
+# first step import your prop
+spring.config.import=classpath:info/configs.properties
 # H2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 
 # Datasource for H2
-spring.datasource.url=jdbc:h2:B:/h2database/dbforeign/scriptdata
-spring.datasource.username=ttknp
-spring.datasource.password=
-spring.datasource.driver-class-name=org.h2.Driver
-
+spring.datasource.url=${H2_URL_INDISK}/dbforeign/scriptdata
+# then we can use key from other file
+spring.datasource.username=${H2_USERNAME}
+spring.datasource.password=${H2_PASSWORD}
+spring.datasource.driver-class-name=${H2_DRIVER}
 # JPA
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=none
+spring.jpa.database-platform=${H2_JPA_PLATFORM}
 # Logging slq
 spring.jpa.show-sql=true
