--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -19,7 +19,7 @@ log4j.appender.console.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} [%t] %-5
 
 # redirect log messages to a log file, support file rolling.
 log4j.appender.file=org.apache.log4j.RollingFileAppender
-log4j.appender.file.File=B:\\log4j\\dao-scriptdata.log
+log4j.appender.file.File=B:\\log4j-app\\dao-scriptdata.log
 log4j.appender.file.MaxFileSize=2MB
 log4j.appender.file.MaxBackupIndex=10
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
