remind the logic
clear the logic and testing app

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,7 +1,8 @@
 # setting log4j
 
 # root logger option
-log4j.rootLogger=DEBUG,console,file
+# log4j.rootLogger=DEBUG,console,file
+log4j.rootLogger=DEBUG,console
 
 # redirect log output to console
 log4j.appender.console=org.apache.log4j.ConsoleAppender
